# drum-score

./: .gitignore  .version  Dockerfile  README.md  docker-compose.yml  sample-docker-compose.yml
.github/workflows/: django.yml  docker-image.yml  main.yml
.scripts/: README.md  python_dependances_update.bat  python_dependances_update.sh  version_info_updater.bat  version_info_updater.sh
backend/: .dockerignore  .flake8  Dockerfile  dev-requirements.txt  pyproject.toml  requirements.txt
backend/api_v1/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/api_v1/management/: url_from_allowed_hosts.py
backend/api_v1/management/commands/: ensure_adminuser.py  url_from_allowed_hosts.py
backend/api_v1/migrations/: 0001_initial.py  0002_rename_name_artist_artist_name_song.py  0003_score.py  0004_alter_score_options_score_score_type_and_more.py  0005_song_performer.py  0006_alter_song_performer.py
backend/backend/: tests.py  urls.py
backend/backend/settings/: default.py
backend/dockerfiles/: docker-entrypoint.sh
frontend/docs/: variables.md
frontend/drum-score/: Dockerfile  README.md  angular.json  package-lock.json  package.json
frontend/drum-score/dockerfiles/: default.conf.template  nginx.conf  nginx.conf.template
frontend/drum-score/src/: index.html
frontend/drum-score/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
frontend/drum-score/src/app/Models/: Scores.ts  SongPaginator.ts  atrist.ts  songs.ts
frontend/drum-score/src/app/components/main/: main.component.html  main.component.ts
frontend/drum-score/src/app/components/music-note-list/: music-note-list.component.spec.ts  music-note-list.component.ts
frontend/drum-score/src/app/components/navbar/: navbar.component.html
frontend/drum-score/src/app/components/score/: score.component.html  score.component.ts
frontend/drum-score/src/app/components/songs/: songs.component.html  songs.component.ts
frontend/drum-score/src/app/services/: error.service.ts  scores.service.ts  songs.service.ts
frontend/drum-score/src/environments/: environment.development.ts  environment.ts
